--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
         </div>
       </section>
     </main>
+
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo">
@@ -570,7 +571,113 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscription">
+          <p class="footer-soc-text">Subscribe</p>
+          <form class="footer-form">
+            <label for="footer-email"></label>
+            <input
+              type="email"
+              name="footer-email"
+              id="footer-email"
+              class="footer-input"
+              placeholder="E-mail"
+            />
+            <button class="footer-subscribe-btn" type="submit">
+              Subscribe
+              <svg class="icon-subscribe-btn" width="24" height="20">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg class="icon-close-btn" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-part">
+            <label for="modal-name" class="modal-label">Name</label>
+            <div class="input-wrapper">
+              <input
+                type="text"
+                name="modal-name"
+                id="modal-name"
+                class="modal-input"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-part">
+            <label for="modal-tel" class="modal-label">Phone</label>
+            <div class="input-wrapper">
+              <input
+                type="tel"
+                name="modal-tel"
+                id="modal-tel"
+                class="modal-input"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-part">
+            <label for="modal-email" class="modal-label">Email</label>
+            <div class="input-wrapper">
+              <input
+                type="email"
+                name="modal-email"
+                id="modal-email"
+                class="modal-input"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-part">
+            <label for="modal-comment" class="modal-label">Comment</label>
+            <textarea
+              name="modal-comment"
+              id="modal-comment"
+              class="modal-textarea"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="modal-part">
+            <input
+              type="checkbox"
+              name="check"
+              id="check"
+              value="true"
+              class="modal-check visually-hidden"
+            />
+            <label for="check" class="modal-check-text"
+              ><span>
+                <svg class="modal-check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+
+              <a href="" target="_blank" class="policy-color"
+                >Privacy Policy</a
+              ></label
+            >
+          </div>
+          <button type="submit" class="send-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
