--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
         <div class="footer-subscription">
           <p class="footer-soc-text">Subscribe</p>
           <form class="footer-form">
-            <label for="footer-email"></label>
+            <label for="footer-email" class="footer-email-label"></label>
             <input
               type="email"
               name="footer-email"
@@ -584,7 +584,7 @@
             />
             <button class="footer-subscribe-btn" type="submit">
               Subscribe
-              <svg class="icon-subscribe-btn" width="24" height="20">
+              <svg class="icon-subscribe-btn" width="24" height="24">
                 <use href="./images/icons.svg#icon-Frame-3"></use>
               </svg>
             </button>
@@ -593,7 +593,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="icon-close-btn" width="8" height="8">
@@ -603,15 +603,15 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-part">
-            <label for="modal-name" class="modal-label">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="input-wrapper">
               <input
                 type="text"
-                name="modal-name"
-                id="modal-name"
+                name="user-name"
+                id="user-name"
                 class="modal-input"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
@@ -644,26 +644,26 @@
               </svg>
             </div>
           </div>
-          <div class="modal-part">
-            <label for="modal-comment" class="modal-label">Comment</label>
+          <div class="modal-part comment-part">
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="modal-comment"
-              id="modal-comment"
+              name="user-comment"
+              id="user-comment"
               class="modal-textarea"
               placeholder="Text input"
             ></textarea>
           </div>
 
-          <div class="modal-part">
+          <div class="modal-part checkbox-part">
             <input
               type="checkbox"
-              name="check"
-              id="check"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
               class="modal-check visually-hidden"
             />
-            <label for="check" class="modal-check-text"
-              ><span>
+            <label for="user-privacy" class="modal-check-text"
+              ><span class="modal-check-item">
                 <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
