--- a/index.html
+++ b/index.html
@@ -574,14 +574,15 @@
         <div class="footer-subscription">
           <p class="footer-soc-text">Subscribe</p>
           <form class="footer-form">
-            <label for="footer-email" class="footer-email-label"></label>
-            <input
-              type="email"
-              name="footer-email"
-              id="footer-email"
-              class="footer-input"
-              placeholder="E-mail"
-            />
+            <label for="footer-email" class="footer-email-label">
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                class="footer-input"
+                placeholder="E-mail"
+            /></label>
+
             <button class="footer-subscribe-btn" type="submit">
               Subscribe
               <svg class="icon-subscribe-btn" width="24" height="24">
